UI Updates - Fix spacing, form validation messages and snackbar improvements

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -19,6 +19,10 @@ legend.MuiTypography-root {
   }
 }
 
+h3.MuiTypography-root + p {
+  margin-top: 0.75rem;
+}
+
 .sectionHeaderButton {
   & + button {
     margin-left: 0.5rem;
